--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta property='og:image' content="%PUBLIC_URL%/IMG_3934.JPG"/>
+    <!-- <meta property='og:image' content="%PUBLIC_URL%/IMG_3934.JPG"/> -->
+    <meta name="twitter:image" content="https://cdn.doordash.com/media/restaurant/cover/KigaruSushi3486BeavertonOR.png">
+    <meta name="og:image" content="https://cdn.doordash.com/media/restaurant/cover/KigaruSushi3486BeavertonOR.png">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
