--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,6 @@
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
 
-
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -73,5 +72,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://cf.chownowcdn.com/latest/static/integrations/ordering-modal.min.js" data-chownow-company-id="22955"></script>
   </body>
 </html>
